2010-10-11  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: #15775: Avoid that browser-cache issues cause too much confusion during upgrade (debug-mode dragdrop.js caused 404)

2010-10-10  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15946: version comparison doesn't work on dev version of TYPO3_4-4 branch
	* Fixed bug: #15948: Content from PID message looks strange

2010-10-09  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #15908: access restriction for tv-objects in usergroup setting will be ignored
	* Fixed issue: #15933: "Create new Template Object" puts new TOs on wrong page
	* Fixed issue: #15943: tt_content move-to placeholder show up in the non-used CE list 

2010-10-08  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15498: Use Flash Messages in wizard (Thanks to Benjamin Mack)

2010-10-07  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15878: current value is not given to etypesextraformfields hook 
	* Fixed issue: #15926: Make template folder configurable 
	* Fixed issue: #15921: tx_templavoila_datastructureRepository->getAll() does not handle scope properly 

2010-10-06  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15920: element icons don't show the id in their tooltips anymore 
	* Follow-up to: #15125: static DS not working in conjunction with TYPO3 caches - manual still contained some old references
	* Fixed bug: #15890: Editor is getting false flash message for missing rights 
	* Fixed bug: #15918: co content found! mapping to root element lost 

2010-10-03  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Follow-up to: #15210: TemplaVoila should adjust it's look&feel to TYPO3 4.4 - translation-text color fixed
	* Fixed issue: #15859: sectionIndex doesn't work as supposed when TemplaVoila is used (Thanks to Steffen Kamper)

2010-09-28  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #15837: % char in locallang label causes php warning