@@ -1,3 +1,7 @@
+2010-10-12  Tolleiv Nietsch <nietsch@aoemedia.de> 
+
+	* Fixed issue: #15957: TV does not honour TCAdefaults from PageTSconfig or UserTSconfig 
+
 2010-10-11  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
 	* Follow-up to: #15775: Avoid that browser-cache issues cause too much confusion during upgrade (debug-mode dragdrop.js caused 404)
